_cache/v0.18.1/ncurses/specs.md
---
title: "ncurses"
layout: cache
categories: [package, v0.18.1]
meta: {"versions": ["6.2"], "compilers": ["gcc@=7.3.1", "gcc@=7.5.0", "gcc@=8.4.0"], "oss": ["amzn2", "ubuntu18.04"], "platforms": ["linux"], "targets": ["aarch64", "graviton2", "x86_64", "x86_64_v3", "x86_64_v4"], "stacks": ["aws-ahug", "aws-ahug-aarch64", "aws-isc", "aws-isc-aarch64", "build_systems", "data-vis-sdk", "e4s", "radiuss", "root", "tutorial"], "num_specs": 6, "num_specs_by_stack": {"build_systems": 1, "e4s": 1, "tutorial": 2, "data-vis-sdk": 1, "root": 6, "radiuss": 1, "aws-isc": 2, "aws-ahug": 2, "aws-ahug-aarch64": 2, "aws-isc-aarch64": 2}}
spec_details: [{"hash": "frwzsc4jrou7efe7huyzeownqfjvsrfd", "compiler": "gcc@=7.5.0", "versions": ["6.2"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["abi=none", "~symlinks", "+termlib"], "stacks": ["build_systems", "e4s", "tutorial", "data-vis-sdk", "root", "radiuss"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/ncurses-6.2/linux-ubuntu18.04-x86_64-gcc-7.5.0-ncurses-6.2-frwzsc4jrou7efe7huyzeownqfjvsrfd.spack"}, {"hash": "7yl4ibbye35cz3oozhieyhblzj2adkoy", "compiler": "gcc@=7.3.1", "versions": ["6.2"], "os": "amzn2", "platform": "linux", "target": "x86_64_v4", "variants": ["abi=none", "~symlinks", "+termlib"], "stacks": ["root", "aws-isc", "aws-ahug"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v4/gcc-7.3.1/ncurses-6.2/linux-amzn2-x86_64_v4-gcc-7.3.1-ncurses-6.2-7yl4ibbye35cz3oozhieyhblzj2adkoy.spack"}, {"hash": "aqwxspsk6tmt7m4q2rov3u6jzuhpzbfk", "compiler": "gcc@=7.3.1", "versions": ["6.2"], "os": "amzn2", "platform": "linux", "target": "graviton2", "variants": ["abi=none", "~symlinks", "+termlib"], "stacks": ["root", "aws-ahug-aarch64", "aws-isc-aarch64"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-graviton2/gcc-7.3.1/ncurses-6.2/linux-amzn2-graviton2-gcc-7.3.1-ncurses-6.2-aqwxspsk6tmt7m4q2rov3u6jzuhpzbfk.spack"}, {"hash": "wd4lwn3pmjqqpxd7tqgjq6q6rfa5y6jx", "compiler": "gcc@=7.3.1", "versions": ["6.2"], "os": "amzn2", "platform": "linux", "target": "aarch64", "variants": ["abi=none", "~symlinks", "+termlib"], "stacks": ["root", "aws-ahug-aarch64", "aws-isc-aarch64"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-aarch64/gcc-7.3.1/ncurses-6.2/linux-amzn2-aarch64-gcc-7.3.1-ncurses-6.2-wd4lwn3pmjqqpxd7tqgjq6q6rfa5y6jx.spack"}, {"hash": "7w7g5dft3d73ic5nirfmiczbllapkaau", "compiler": "gcc@=7.3.1", "versions": ["6.2"], "os": "amzn2", "platform": "linux", "target": "x86_64_v3", "variants": ["abi=none", "~symlinks", "+termlib"], "stacks": ["root", "aws-isc", "aws-ahug"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v3/gcc-7.3.1/ncurses-6.2/linux-amzn2-x86_64_v3-gcc-7.3.1-ncurses-6.2-7w7g5dft3d73ic5nirfmiczbllapkaau.spack"}, {"hash": "o3zj6m3lqwcctkkns4buq4comkqcxnty", "compiler": "gcc@=8.4.0", "versions": ["6.2"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["abi=none", "~symlinks", "+termlib"], "stacks": ["root", "tutorial"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-8.4.0/ncurses-6.2/linux-ubuntu18.04-x86_64-gcc-8.4.0-ncurses-6.2-o3zj6m3lqwcctkkns4buq4comkqcxnty.spack"}]
---